@@ -2,6 +2,10 @@
 Changes with Apache 2.3.0
   [Remove entries to the current 2.0 and 2.2 section below, when backported]
 
+  *) HTTP proxy ProxyErrorOverride: Leave 1xx and 3xx responses alone.  Only
+     processing of error responses (4xx, 5xx) will be altered.  PR 39245.
+     [Jeff Trawick, Bart van der Schans <schans hippo.nl>]
+
   *) htdbm: Enable crypt support on platforms with crypt() but not
      <crypt.h>, such as z/OS. [David Jones <oscaremma gmail.com>]
 
